kubernetes/uptime-kube/uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: misc
  labels:
    app: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: uptime-kuma-pcv
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: 4000m
            requests:
              cpu: 500m
          volumeMounts:
          - mountPath: /app/data
            name: volume
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: misc
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: misc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  tls:
    - hosts:
        - uptime.meanii.dev
      secretName: meanii-dev-tls-secret
  rules:
    - host: uptime.meanii.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-svc
                port:
                  number: 3001
